# CPPLabs

./: README.md
FirstSemester/FifthLabwork/: CMakeLists.txt  README.md
FirstSemester/FifthLabwork/lib/: CMakeLists.txt  TernaryMassive.cpp  TernaryMassive.h
FirstSemester/FifthLabwork/tests/: CMakeLists.txt  Three-dimensional-array_test.cpp
FirstSemester/FirstLabwork/: main.cpp
FirstSemester/FourthLabwork/: CMakeLists.txt  README.md
FirstSemester/FourthLabwork/lib/: ArgParser.cpp  ArgParser.h  Argument.cpp  Argument.h  CMakeLists.txt
FirstSemester/FourthLabwork/tests/: CMakeLists.txt  argparser_test.cpp
FirstSemester/SixthLabwork/lib/: Archive.h  ArchiveReader.h  ArchiveWriter.h
FirstSemester/ThirdLabwork/: CMakeLists.txt  Image.cpp  Image.h  Parser.cpp  Parser.h  README.md  Sandpile.cpp  Sandpile.h  Timer.h  main.cpp
SecondSemester/EighthLabwork/: CMakeLists.txt  README.md
SecondSemester/EighthLabwork/lib/: CMakeLists.txt  Container.cpp  Container.h  Node.h  Tree.h
SecondSemester/EighthLabwork/tests/: CMakeLists.txt  Tests.cpp
SecondSemester/EleventhLabwork/: CMakeLists.txt  README.md
SecondSemester/EleventhLabwork/finderbin/: CMakeLists.txt  main.cpp
SecondSemester/EleventhLabwork/indexbin/: CMakeLists.txt  main.cpp
SecondSemester/EleventhLabwork/lib/: CMakeLists.txt
SecondSemester/EleventhLabwork/lib/finder/: BM25.cpp  FinderProcessor.cpp  Node.h  Parser.cpp  Parser.h  Request.h  TF_IDF.cpp  Tree.cpp  Tree.h
SecondSemester/EleventhLabwork/lib/indexator/: File.cpp  File.h  IndexInFile.h  IndexatorProcessor.cpp  Ourdirectory.cpp  Ourdirectory.h
SecondSemester/EleventhLabwork/tests/: CMakeLists.txt  tests.cpp
SecondSemester/NinthLabwork/: CMakeLists.txt
SecondSemester/NinthLabwork/lib/: Adapter.cpp  Adapter.h  CMakeLists.txt
SecondSemester/NinthLabwork/tests/: CMakeLists.txt  Tests.cpp
SecondSemester/SeventhLabwork/: CMakeLists.txt  City.cpp  City.h  ConstantParticle.h  InformationForWeather.json  README.md  Writer.cpp  Writer.h  main.cpp
SecondSemester/TenthLabwork/: CMakeLists.txt
SecondSemester/TenthLabwork/lib/: BinaryTask.h  CMakeLists.txt  My_any.h  Scheduler.cpp  Scheduler.h  Task.h  UnaryTask.h
SecondSemester/TenthLabwork/tests/: CMakeLists.txt  tests.cpp
